2013-03-07  Mark Pilgrim  <pilgrim@chromium.org>

        [Chromium] Update some #includes for WebFileInfo.h in WK/chromium/src/
        https://bugs.webkit.org/show_bug.cgi?id=111741

        Reviewed by James Robinson.

        In preparation for removing WK/chromium/public/WebFileInfo.h.

        * src/AssertMatchingEnums.cpp:

2013-03-07  Mark Pilgrim  <pilgrim@chromium.org>

        [Chromium] Remove WK/chromium/public/WebWorkerRunLoop.h
        https://bugs.webkit.org/show_bug.cgi?id=111740

        Reviewed by James Robinson.

        No longer needed; all references have been updated to new version
        in top-level Platform/ directory.

        * public/WebWorkerRunLoop.h: Removed.

2013-03-07  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed.  Rolled Chromium DEPS to r186592.  Requested by
        "Dana Jansens" <danakj@chromium.org> via sheriffbot.

        * DEPS:

2013-03-07  Mark Pilgrim  <pilgrim@chromium.org>

        [Chromium] Update some #includes for WebVideoFrame.h
        https://bugs.webkit.org/show_bug.cgi?id=111739

        Reviewed by James Robinson.

        In anticipation of removing WebVideoFrame.h from WK/chromium/public/.

        * public/WebMediaPlayer.h:

2013-03-07  Dana Jansens  <danakj@chromium.org>

        [chromium] Remove WebView's sharedGraphicsContext3D method.
        https://bugs.webkit.org/show_bug.cgi?id=111499

        Reviewed by James Robinson.

        * public/WebView.h:
        (WebView):
        * src/WebViewImpl.cpp:
        * src/WebViewImpl.h:
        (WebViewImpl):

2013-03-07  Vsevolod Vlasov  <vsevik@chromium.org>

        Web Inspector: Support a shortcut for reloading front-end in debug mode.
        https://bugs.webkit.org/show_bug.cgi?id=111709

        Reviewed by Pavel Feldman.

        * src/js/DevTools.js:

2013-03-07  Alexei Filippov  <alph@chromium.org>

        Web Inspector: Add more diagnostics output to testRendererProcessNativeMemorySize